# llm-clutch

./: 404.html  README.md  docker-compose.test.yml  docs-requirements.txt  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build-docker.yml  ci.yml  documentation.yml  publish.yml
CONTRIBUTING/: index.html
DEVELOPMENT_PHILOSOPHY/: index.html
DOCUMENTATION_README/: index.html
HARDWARE_GUIDE/: index.html
LOCAL_DEVELOPMENT_DEPENDENCIES/: index.html
SHARED_LIBRARY_VERSIONING/: index.html
api/: index.html
api/backend/: index.html
api/clutch/: index.html
api/infra/: index.html
cli/: index.html
config/: index.html
docs-src/: HARDWARE_GUIDE.md  LOCAL_DEVELOPMENT_DEPENDENCIES.md  cli.md  config.md
docs-src/api/: backend.md  clutch.md  index.md  infra.md
feature-request-automation/: index.html
libs/: README.md
libs/llm-clutch/: README.md  pyproject.toml
libs/llm-clutch/src/llm_clutch/: __init__.py  cli.py
libs/llm-clutch/src/llm_clutch/backend/: __init__.py  base.py  exceptions.py  exo.py
libs/llm-clutch/src/llm_clutch/core/: clutch.py  infra.py
libs/llm-clutch/src/llm_clutch/integrations/: __init__.py  openclaw.py
libs/llm-clutch/tests/: test_backend_base.py  test_backend_exceptions.py  test_cli.py  test_clutch.py  test_fixture_examples.py  test_infra_manager.py  test_openclaw_integration.py  test_placeholder.py
search/: search_index.json
testing/: README.md  __init__.py  conftest.py  factories.py
tests/: conftest.py  test_cli.py  test_clutch.py  test_exo_backend.py
(+23 files in other folders)
