[project]
name = "llm-clutch"
version = "0.1.0"
description = "Shared library for LLM orchestration and integrations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2,<9",
    "httpx>=0.28.1,<1",
    "structlog>=26.1.0,<27",
    "tenacity>=9.1.4,<10",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0,<3",
    "pytest>=9.1.1,<10",
    "pytest-asyncio>=0.23.0,<1",
    "ruff>=0.15.20,<0.16",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
